--- a/scss/offertspage/_offertspage_step_three.scss
+++ b/scss/offertspage/_offertspage_step_three.scss
@@ -454,15 +454,18 @@
         .top-title-box {
             flex-direction: column;
             &__left {
+                align-items: flex-start;
                 flex-direction: column;
                 width: 100%;
                 margin-right: 0;
                 h1 {
                     font-size: 24px;
-                    padding: 24px 0 24px 0;
+                    padding: 24px 0 0 0;
                 }
             }
             &__right {
+                justify-content: flex-start;
+                width: 100%;
                 .help-box {
                     padding: 0 16px;
                     margin: 16px 0;
